--- a/src/main/resources/admin.fxml
+++ b/src/main/resources/admin.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -42,9 +43,9 @@
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <TextField layoutX="101.0" layoutY="43.0" prefHeight="31.0" prefWidth="500.0" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="39.0" AnchorPane.topAnchor="30.0" />
-                                          <TextField layoutX="102.0" layoutY="74.0" prefHeight="31.0" prefWidth="501.0" AnchorPane.leftAnchor="102.0" AnchorPane.rightAnchor="38.0" AnchorPane.topAnchor="91.0" />
-                                          <TextArea layoutX="101.0" layoutY="166.0" prefHeight="70.0" prefWidth="501.0" wrapText="true" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="38.0" AnchorPane.topAnchor="152.0" />
+                                          <TextField fx:id="nazwaTextField" layoutX="101.0" layoutY="43.0" prefHeight="31.0" prefWidth="500.0" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="39.0" AnchorPane.topAnchor="30.0" />
+                                          <TextField fx:id="rezyserTextField" layoutX="102.0" layoutY="74.0" prefHeight="31.0" prefWidth="501.0" AnchorPane.leftAnchor="102.0" AnchorPane.rightAnchor="38.0" AnchorPane.topAnchor="91.0" />
+                                          <TextArea fx:id="opisTextArea" layoutX="101.0" layoutY="166.0" prefHeight="70.0" prefWidth="501.0" wrapText="true" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="38.0" AnchorPane.topAnchor="152.0" />
                                           <Label layoutX="30.0" layoutY="249.0" prefHeight="37.0" prefWidth="70.0" text="Gatunek:" AnchorPane.leftAnchor="14.0">
                                              <font>
                                                 <Font size="14.0" />
@@ -55,14 +56,14 @@
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <DatePicker layoutX="100.0" layoutY="283.0" prefWidth="150.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="323.0" />
-                                          <Spinner layoutX="452.0" layoutY="212.0" prefHeight="31.0" prefWidth="150.0" AnchorPane.leftAnchor="452.0" AnchorPane.topAnchor="252.0" />
+                                          <DatePicker fx:id="premieraDatePicker" layoutX="100.0" layoutY="283.0" prefWidth="150.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="323.0" />
+                                          <Spinner fx:id="liczbaKopiSpinner" layoutX="452.0" layoutY="212.0" prefHeight="31.0" prefWidth="150.0" AnchorPane.leftAnchor="452.0" AnchorPane.topAnchor="252.0" />
                                           <Label layoutX="352.0" layoutY="248.0" prefHeight="40.0" prefWidth="87.0" text="Liczba kopii:" wrapText="true" AnchorPane.leftAnchor="352.0">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
                                           </Label>
-                                          <Button layoutX="452.0" layoutY="314.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="150.0" style="-fx-background-color: #99C24D;" text="Dodaj" AnchorPane.leftAnchor="452.0" AnchorPane.topAnchor="314.0" />
+                                          <Button layoutX="452.0" layoutY="314.0" mnemonicParsing="false" onAction="#addFilmToDataBase" prefHeight="47.0" prefWidth="150.0" style="-fx-background-color: #99C24D;" text="Dodaj" AnchorPane.leftAnchor="452.0" AnchorPane.topAnchor="314.0" />
                                           <ComboBox id="gatunkiBox" fx:id="gatunekComboBox" layoutX="100.0" layoutY="280.0" prefHeight="31.0" prefWidth="150.0" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="252.0" />
                                        </children>
                                     </AnchorPane>
@@ -131,7 +132,7 @@
                                           <TextField fx:id="haslo" layoutX="108.0" layoutY="175.0" prefHeight="25.0" prefWidth="488.0" AnchorPane.leftAnchor="108.0" AnchorPane.rightAnchor="44.0" />
                                           <TextField fx:id="haslo2" layoutX="108.0" layoutY="215.0" prefHeight="25.0" prefWidth="488.0" AnchorPane.leftAnchor="108.0" AnchorPane.rightAnchor="44.0" />
                                           <Button layoutX="108.0" layoutY="301.0" mnemonicParsing="false" onAction="#addKlientToDataBase" prefHeight="41.0" prefWidth="105.0" style="-fx-background-color: #99C24D;" text="Dodaj" AnchorPane.leftAnchor="108.0" />
-                                          <CheckBox fx:id="admin" layoutX="108.0" layoutY="260.0" mnemonicParsing="false" text="Nadać uprawnienia administratora?" AnchorPane.leftAnchor="108.0" AnchorPane.rightAnchor="245.0" />
+                                          <CheckBox fx:id="adminCheckBox" layoutX="108.0" layoutY="260.0" mnemonicParsing="false" text="Nadać uprawnienia administratora?" AnchorPane.leftAnchor="108.0" AnchorPane.rightAnchor="245.0" />
                                        </children>
                                     </AnchorPane>
                                  </content>
@@ -140,8 +141,11 @@
                                  <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #fcfcfc;">
                                        <children>
-                                          <Button layoutX="552.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: #99C24D;" text="Szukaj" AnchorPane.rightAnchor="20.0" />
-                                          <TextField layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="530.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="102.0" />
+                                          <Button layoutX="552.0" layoutY="14.0" mnemonicParsing="false" onAction="#kontoButton" style="-fx-background-color: #99C24D;" text="Szukaj" AnchorPane.rightAnchor="20.0" />
+                                          <TextField fx:id="kontoTextField" layoutX="14.0" layoutY="15.0" prefHeight="25.0" prefWidth="530.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="102.0" />
+                                          <ListView fx:id="kontoListView" layoutX="20.0" layoutY="57.0" prefHeight="195.0" prefWidth="602.0" />
+                                          <Button layoutX="557.0" layoutY="265.0" mnemonicParsing="false" text="Usuń" />
+                                          <Button layoutX="456.0" layoutY="265.0" mnemonicParsing="false" text="Edytuj" />
                                        </children>
                                     </AnchorPane>
                                  </content>
